add support for building on Travis-CI
- I fixed bugs exposed by using other compilers.
- I restricted clang-tidy to compilers greater than 8.x. 7.x versions
result in clang-tidy segfaulting for some reason.

--- a/fits/CMakeLists.txt
+++ b/fits/CMakeLists.txt
@@ -5,6 +5,14 @@ add_library(fits
 add_library(fits::fits ALIAS fits)
 target_include_directories(fits PUBLIC "${CMAKE_SOURCE_DIR}")
 target_compile_features(fits PUBLIC cxx_std_17)
-target_compile_options(fits PRIVATE ${compiler_options})
+target_compile_options(fits
+  PRIVATE
+    ${compiler_options}
+    $<$<CXX_COMPILER_ID:Clang>:-stdlib=libc++>
+)
 find_package(gsl_microsoft REQUIRED)
-target_link_libraries(fits PUBLIC gsl_microsoft::gsl_microsoft)
+target_link_libraries(fits
+  PUBLIC
+    $<$<CXX_COMPILER_ID:Clang>:c++>
+    gsl_microsoft::gsl_microsoft
+)
