--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,9 @@ project(
   LANGUAGES CXX
 )
 
-option(
-  quality_checks
-  "Disabling this disables quality checks such as clang-tidy and Cppcheck."
-  on
-)
+option(quality_checks
+       "Disabling this disables quality checks such as clang-tidy and Cppcheck."
+       on)
 if(quality_checks)
   include(cmake/clang-tidy.cmake)
 endif()
@@ -27,16 +25,17 @@ add_subdirectory(fits)
 if(quality_checks)
   # Note, that the memory check variables must be set up before CTest is
   # included. Thus, they are here and not in the unit_tests directory.
-  string(CONCAT
-    MEMORYCHECK_COMMAND_OPTIONS
-    "--quiet"
-    " --gen-suppressions=all"
-    " --tool=memcheck"
-    " --leak-check=yes"
-    " --track-origins=yes"
-    " --error-exitcode=1"
+  string(
+    CONCAT
+      MEMORYCHECK_COMMAND_OPTIONS
+      "--quiet"
+      " --gen-suppressions=all"
+      " --tool=memcheck"
+      " --leak-check=yes"
+      " --track-origins=yes"
+      " --error-exitcode=1"
   )
   include(CTest)
   add_subdirectory(unit_tests)
-  #add_subdirectory(compilation_tests)
+  # add_subdirectory(compilation_tests)
 endif()
