work on fits exceptions
I cleaned up the exceptions in fits/errors.h. They conform to the design
I've started in design/class_diagram.uml. I've also added a unit test.

--- a/fits/CMakeLists.txt
+++ b/fits/CMakeLists.txt
@@ -1,5 +1,4 @@
-add_library(fits header.cpp header.h)
-#add_library(fits errors.cpp errors.h header.cpp header.h)
+add_library(fits errors.cpp errors.h header.cpp header.h)
 add_library(fits::fits ALIAS fits)
 target_include_directories(fits PUBLIC "${CMAKE_SOURCE_DIR}")
 target_compile_features(fits PUBLIC cxx_std_17)
