add color output to the unit tests
I added --use-colour=yes to the unit test command lines.

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -16,6 +16,6 @@ foreach(test IN LISTS tests)
     ${test}
     PRIVATE $<$<CXX_COMPILER_ID:Clang>:-stdlib=libc++>
   )
-  add_test(NAME ${test} COMMAND ${test})
+  add_test(NAME ${test} COMMAND ${test} --use-colour=yes)
 endforeach()
 set_tests_properties(${tests} PROPERTIES LABELS unit)
