--- a/fits/CMakeLists.txt
+++ b/fits/CMakeLists.txt
@@ -4,6 +4,8 @@ target_include_directories(fits PUBLIC "${CMAKE_SOURCE_DIR}")
 target_compile_features(fits PUBLIC cxx_std_17)
 target_compile_options(
   fits
-  PRIVATE ${compiler_options} $<$<CXX_COMPILER_ID:Clang>:-stdlib=libc++>
+  PRIVATE
+    ${compiler_options}
+    $<$<CXX_COMPILER_ID:Clang>:-stdlib=libc++>
 )
 target_link_libraries(fits PUBLIC $<$<CXX_COMPILER_ID:Clang>:c++>)
