--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -1,5 +1,4 @@
 option(fits_enable_asan "Enable or disable building with Address Sanitizer." off)
-
 set(tests errors_test keyword_record_test)
 foreach(test IN LISTS tests)
   add_executable(${test} ${test}.cpp fits_testing.h fits_testing.cpp)
@@ -10,7 +9,7 @@ foreach(test IN LISTS tests)
       catch::catch2
       fits::fits
   )
-  target_compile_definitions(${test} PRIVATE GSL_THROW_ON_CONTRACT_VIOLATION)
+  # target_compile_definitions(${test} PRIVATE GSL_THROW_ON_CONTRACT_VIOLATION)
   target_compile_options(
     ${test}
     PRIVATE $<$<CXX_COMPILER_ID:Clang>:-stdlib=libc++>
