--- a/catch2/CMakeLists.txt
+++ b/catch2/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(catch2 INTERFACE)
-target_include_directories(catch2 SYSTEM INTERFACE "${CMAKE_CURRENT_LIST_DIR}")
+target_include_directories(catch2 SYSTEM INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
 add_library(catch::catch2 ALIAS catch2)
