--- a/fits/CMakeLists.txt
+++ b/fits/CMakeLists.txt
@@ -1,6 +1,11 @@
-add_library(fits errors.cpp errors.h header.cpp header.h)
+add_library(fits
+  fits/errors.cpp
+  fits/errors.h
+  fits/header_block.cpp
+  fits/header_block.h
+)
 add_library(fits::fits ALIAS fits)
-target_include_directories(fits PUBLIC "${CMAKE_SOURCE_DIR}")
+target_include_directories(fits PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 target_compile_features(fits PUBLIC cxx_std_17)
 target_compile_options(
   fits
